migrate to coder

--- a/themes/material/_config.yml
+++ b/themes/material/_config.yml
@@ -171,7 +171,7 @@ sidebar:
         divider: false
     footer:
         divider: true
-        theme: true
+        theme: false
         support: false
         feedback: false
         material: false
