--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: 'https://shanlanmi.github.io/zsl-blog'
-root: '/zsl-blog/'
+url: 'https://shanlanmi.github.io/coder'
+root: '/coder/'
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
@@ -83,7 +83,7 @@ theme: material
 ## Docs: https://hexo.io/docs/deployment.html
 deploy: 
   type: git
-  repository: git@github.com:shanlanmi/zsl-blog.git
+  repository: git@github.com:shanlanmi/coder.git
   branch: gh-pages
   # repository: git@github.com:shanlanmi/zsl.git
   # branch: master
